bug: adjust scrollbar oriention in different direction

--- a/packages/dockview-core/src/scrollbar.scss
+++ b/packages/dockview-core/src/scrollbar.scss
@@ -2,11 +2,8 @@
     position: relative;
     overflow: hidden;
 
-    .dv-scrollbar-horizontal {
+    .dv-scrollbar {
         position: absolute;
-        bottom: 0px;
-        left: 0px;
-        height: 4px;
         border-radius: 2px;
         background-color: transparent;
         transition-property: background-color;
@@ -15,10 +12,23 @@
         transition-delay: 0s;
     }
 
+
+    .dv-scrollbar-horizontal {
+        bottom: 0px;
+        left: 0px;
+        height: 4px;
+    }
+
+    .dv-scrollbar-vertical {
+        right: 0px;
+        top: 0px;
+        width: 4px;
+    }
+
     &:hover,
     &.dv-scrollable-resizing,
     &.dv-scrollable-scrolling {
-        .dv-scrollbar-horizontal {
+        .dv-scrollbar {
             background-color: var(
                 --dv-scrollbar-background-color,
                 rgba(255, 255, 255, 0.25)
